# QDraw

./: README.md  requirements.txt
misc/: results2.txt
notebooks/: average_experiment.ipynb  average_separable.txt  classical_3class_2edition_ctrlpts.txt  classical_lstm_3class_2edition.txt  data_preprocessing.ipynb  model.pt  model_lstm.ipynb  model_lstm_pytorch.ipynb  modeling.ipynb  modeling_gpu.ipynb  modeling_gpu_lstm.ipynb  plotting.ipynb  quantum_lstm_3class_2edition_qfixed.txt  quantum_lstm_3class_qfixed.txt  raster_images.py  raster_img_qcnn.ipynb  raster_img_qcnn.py  results.txt  results3.txt  results_senokosov3class.txt  vector_lstm_classical_2class.ipynb  vector_lstm_classical_2class_2edition_ctrlpts.ipynb  vector_lstm_classical_3class.ipynb  vector_lstm_classical_3class_2edition.ipynb  vector_lstm_classical_3class_2edition_ctrlpts.ipynb  vector_lstm_quantum_2class.ipynb  vector_lstm_quantum_2class_2edition_ctrlpts.ipynb  vector_lstm_quantum_2class_2edition_qfixed_seeds.py  vector_lstm_quantum_2class_qfixed_seeds.py  vector_lstm_quantum_3class_2edition_ctrpts.ipynb  vector_lstm_quantum_3class_2edition_qfixed_seeds.py  vector_lstm_quantum_3class_2edition_withoutCNOTs.ipynb  vector_lstm_quantum_3class_qfixed_seeds.py  vector_lstm_quantum_separable_qfixed_seeds.py
notebooks/done/: data_preprocessing.ipynb  vector_lstm_classical_2class_2edition.ipynb  vector_lstm_classical_2class_2edition_ctrlpts.ipynb  vector_lstm_classical_3class.ipynb  (+14 more)
rust/: Cargo.toml
rust/src/: lib.rs
src/: circuit.py  drawing.py  img_utils.py  test.py  utils.py
(+18 files in other folders)
