[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_sketch"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
image = "0.25.0"
imageproc = "0.24.0"
minifb = "0.25.0"
rayon = "1.10.0"

[profile.release]
opt-level = 3